--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -18,4 +18,15 @@
   .site-layout .site-layout-background {
     background: #fff;
   }
+  .ant-layout-header {
+    height: 136px;
+  }
+}
+
+.search-form {
+  margin: 24px 20px 0;
+}
+
+.table-list {
+  margin: 20px;
 }
